# jimos

./: .gitignore  Cargo.toml  Makefile  README.md  doc.md  docker-compose.yml  tasks.md
baselib/src/: syscall.rs
csrc/: Makefile  layout.ld  main.c
ext/: crt0.S  exceptions.S  head.S  layout.ld
kernel/: Cargo.toml  Makefile  Xargo.toml  aarch64-none-elf.json  build.rs  config.txt  readme.md  run.sh  tasks.md
kernel/doc/: design.md  gdb.md  jlink.md  locking.md  notes.md  qemu.md  roadmap.md  tasks.md
kernel/drivers/: doc.md
kernel/gdb/: gdb.sh  jlink_attach.gdb  qemu_attach.gdb
kernel/src/: gpio.rs  kwriter.rs  lang_items.rs  lib.rs  mailbox.rs  panic.rs  reboot.rs  rootprocess.rs  scheduler.rs  syscall.rs  uart.rs
kernel/src/arch/aarch64/: arm.rs  asm.h  consts.h  crt0.S  exceptions.S  frame.rs  head.S  jtag.c  layout.ld  mod.rs  struct_defs.h  trap.rs
kernel/src/memory/: address_space.rs  area_frame_allocator.rs  heap_allocator.rs  kalloc.rs  mod.rs  va_segment.rs  virtual_address.rs
kernel/src/memory/paging/: entry.rs  mod.rs  table.rs
kernel/src/memory/slab_allocator/: bucket.rs  linked_list_allocator.rs  mod.rs  paged_vector.rs  slab_allocator.rs
kernel/src/process/: mod.rs
kernel/src/programs/: mod.rs
kernel/src/programs/idle/: mod.rs
kernel/src/test/: mod.rs
kernel/src/thread/: idle.rs  mod.rs
shared/elf/src/: lib.rs
src/: gpio.rs  kwriter.rs  lang_items.rs  lib.rs  mailbox.rs  syscall.rs  uart.rs
src/memory/: mod.rs
src/user/: mod.rs  panic.rs
tools/elf_tool/: Cargo.toml
tools/fs_tool/: Cargo.toml  tsmall.img
(+22 files in other folders)
