[package]
name = "blinky"
version = "0.1.0"

[features]
local_crates = []

[lib]
crate-type = ["staticlib"]

[profile.dev]
lto = true
debug = true

[profile.test]
lto = true
debug = true

[profile.release]
lto = true
debug = true

[dependencies]
rlibc = "*"
bitflags = "0.9.1"
spin = "0.5.0"
hashmap_core = "*"

elf = { path = "../shared/elf" }